httpd-test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-internal
  namespace: httpd-test
spec:
  ingressClassName: internal
  rules:
    - host: internal.fake.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-external
  namespace: httpd-test
spec:
  ingressClassName: external
  rules:
    - host: external.fake.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd
                port:
                  number: 80
